# radonop

./: .gitignore  README.md  pyproject.toml
neuralop/: __main__.py  conv.py  kernel.py  loss.py  operator.py
radonop/: operator.py  radon.py
test_neuralop/: test_conv.py  test_kernel.py  test_operator.py
test_radonop/: test_radon.py
