[tool.poetry]
name = "radonop"
version = "0.1.0"
description = "Radon transform using neural operator"
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
torch = [
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl", platform = "win32"}
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl", platform = 'linux' },
    { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl", platform = "win32"}
]
qutip = "^4.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
